Bug 52285 Kill compiler warnings in layout/xul patch by mozilla-bugs@nogin.org r=timeless sr=dbaron